--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
 				<a href="https://github.com/supersonictw/xia" target="_blank" rel="noopener">GitHub Repository</a>
 			</li>
 			<li>
-				&copy; 2020 <a href="https://randychen.tk" target="_blank" rel="noopener">SuperSonic</a>
+				&copy; 2020 <a href="https://randychen.tk" target="_blank" rel="noopener">SuperSonic</a>.
 			</li>
 		</ul>
 	</div>
