--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!--
+    XIA - LINE Web Client
+    ---
+  This Source Code Form is subject to the terms of the Mozilla Public
+  License, v. 2.0. If a copy of the MPL was not distributed with this
+  file, You can obtain one at http://mozilla.org/MPL/2.0/.
+
+  (c) 2020 SuperSonic. (https://github.com/supersonictw)
+-->
+
 <head>
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -15,6 +25,20 @@
 			text-align: center;
 			color: #2c3e50;
 			margin-top: 60px;
+		}
+
+		ul {
+			list-style-type: none;
+			padding: 0;
+		}
+
+		li {
+			display: inline-block;
+			margin: 0 10px;
+		}
+
+		a {
+			color: #42b983;
 		}
 	</style>
 </head>
