--- a/public/index.html
+++ b/public/index.html
@@ -11,56 +11,58 @@
   (c) 2020 SuperSonic. (https://github.com/supersonictw)
 -->
 
-<head>
-	<meta charset="utf-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="viewport" content="width=device-width,initial-scale=1.0" />
-	<link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-	<title><%= htmlWebpackPlugin.options.title %></title>
-	<style>
-		.ui {
-			font-family: Avenir, Helvetica, Arial, sans-serif;
-			-webkit-font-smoothing: antialiased;
-			-moz-osx-font-smoothing: grayscale;
-			text-align: center;
-			color: #2c3e50;
-			margin-top: 60px;
-		}
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <title><%= htmlWebpackPlugin.options.title %></title>
+    <style>
+      .ui {
+        font-family: Avenir, Helvetica, Arial, sans-serif;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+        text-align: center;
+        color: #2c3e50;
+        margin-top: 60px;
+      }
 
-		ul {
-			list-style-type: none;
-			padding: 0;
-		}
+      ul {
+        list-style-type: none;
+        padding: 0;
+      }
 
-		li {
-			display: inline-block;
-			margin: 0 10px;
-		}
+      li {
+        display: inline-block;
+        margin: 0 10px;
+      }
 
-		a {
-			color: #42b983;
-		}
-	</style>
-</head>
+      a {
+        color: #42b983;
+      }
+    </style>
+  </head>
 
-<body>
-	<noscript>
-		<strong
+  <body>
+    <noscript>
+      <strong
         >We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
         properly without JavaScript enabled. Please enable it to
-        continue.</strong>
-	</noscript>
-	<div id="app"></div>
-	<div id="footer" class="ui">
-		<ul>
-			<li>
-				<a href="https://github.com/supersonictw/xia" target="_blank" rel="noopener">GitHub Repository</a>
-			</li>
-			<li>
-				&copy; 2020 <a href="https://randychen.tk" target="_blank" rel="noopener">SuperSonic</a>.
-			</li>
-		</ul>
-	</div>
-</body>
-
+        continue.</strong
+      >
+    </noscript>
+    <div id="app" class="ui">
+      Loading...
+    </div>
+    <div id="footer" class="ui">
+      <ul>
+        <li>
+          &copy; 2020
+          <a href="https://randychen.tk" target="_blank" rel="noopener"
+            >SuperSonic</a
+          >.
+        </li>
+      </ul>
+    </div>
+  </body>
 </html>
