--- a/public/index.html
+++ b/public/index.html
@@ -53,12 +53,13 @@
 
 <body>
   <noscript>
-    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work
-      properly without JavaScript enabled. Please enable it to
-      continue.</strong>
+    <strong>
+      We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
+      Please enable it to continue.
+    </strong>
   </noscript>
   <div id="app" class="ui">
-    Loading...
+    <div style="margin: 60px;">Loading...</div>
   </div>
   <div id="footer" class="ui">
     <ul>
