--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,11 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+  <meta name="description"
+    content="This is the Web Client for LINE that helps everyone keep in touch with their friends any time, any where.">
+  <!-- XIA - Demo: https://xia.randychen.tk -->
+  <link rel="canonical" href="https://xia.randychen.tk" />
+  <!-- This line is used for improving SEO, you may remove it if you need. -->
   <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
   <title><%= htmlWebpackPlugin.options.title %></title>
   <style>
@@ -53,10 +58,10 @@
 
 <body>
   <noscript>
-    <strong>
-      We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
+    <div class="ui">
+      We're sorry, but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.<br>
       Please enable it to continue.
-    </strong>
+    </div>
   </noscript>
   <div id="app" class="ui">
     <div style="margin: 60px;">Loading...</div>
